MHF-139 Fixed alignment issue.

--- a/src/app/layout/components/login-page/login-page.component.scss
+++ b/src/app/layout/components/login-page/login-page.component.scss
@@ -9,21 +9,33 @@
   width:100%;
   background-size: cover;
   background-position: 100% 80%;
+  position: relative;
 }
 .form-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 38.6vw;
+  width: 46.6vw;
   height: 25.44vw;
   max-width: 741px;
   max-height: 487px;
-  min-width: 400px;
+  min-width: 380px;
   min-height:487px;
   background-color: rgba(255, 255, 255, 0.75);
   padding: 3rem;
   border-radius: 10px;
   border:2px solid #FFFFFF;
+}
+
+.footer-text {
+  position: absolute;
+  bottom: 10px;
+  text-align: center;
+  font-size: 14px;
+  color: #ffffff;
+}
+.email-text{
+  color: #ffffff;
 }
 .content {
   height: 100%;
@@ -57,12 +69,12 @@ a {
   border-radius: 4px;
 }
 :host ::ng-deep .p-password input {
-  width: 21rem !important;
+  width: 335px !important;
   height: 48px !important;
 }
 
 .submit-button {
-padding-top:2rem;
+padding-top:1.3rem;
 padding-bottom:1rem;
 }
 .input-container {
@@ -74,14 +86,30 @@ padding-bottom:1rem;
  display:block;
  padding: 5px;
 }
+.p-button {
+  color: #ffffff;
+  background: #2C4052 !important;
+  border: #2C4052 !important;
+  padding: 0.7rem 1.5rem;
+}
 @media only screen and (max-width: 992px) {
   .container {
     background-position: center;
   }
 }
-.p-button {
-  color: #ffffff;
-  background: #2C4052 !important;
-  border: #2C4052 !important;
+@media only screen and (max-width: 576px) {
+  .form-wrapper {
+  min-width: 330px !important;
+  min-height: 450px !important;
 }
+.input-field {
+  width: 250px !important;
+  height: 38px !important;
+}
+:host ::ng-deep .p-password input {
+  width: 250px !important;
+  height: 38px !important;
+}
+}
+
 
